review(4): fix journals text alignment and others

--- a/src/styles/base/_default-page.css
+++ b/src/styles/base/_default-page.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  height: 100vh;
+  height: 100%;
   padding-top: 48px;
   padding-bottom: 48px;
 }
