--- a/src/styles/pages/_auth.css
+++ b/src/styles/pages/_auth.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .logo {
@@ -50,4 +51,15 @@
   font-size: 12px;
   text-align: end;
   margin-top: -18px;
+}
+
+/* Unlogged page */
+.unlogged-page .content {
+  text-align: center;
+}
+
+.unlogged-page .content > .btn {
+  display: block;
+  margin-top: 32px;
+  text-decoration: none;
 }
