--- a/src/styles/pages/_create-journal.css
+++ b/src/styles/pages/_create-journal.css
@@ -1,12 +1,11 @@
 .create-journal-page .cover {
-  background: var(--color-primary-200);
-  position: relative;
   display: flex;
   overflow: hidden;
-  max-width: 240px;
   width: 100%;
+  max-width: 240px;
   min-height: 200px;
   height: 360px;
+  background: var(--color-primary-200);
   border-radius: 4px 16px 16px 4px;
   margin-right: auto;
   margin-left: auto;
@@ -20,12 +19,19 @@
   box-shadow: 1px 0px 6px rgb(0 0 0 / 25%);
 }
 
+.create-journal-page .cover .cover-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: calc(100% - 20px);
+  padding: 0 20px;
+}
+
 .create-journal-page .cover .cover-title {
+  width: 100%;
   font-weight: bold;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  text-align: center;
+  overflow-wrap: break-word;
 }
 
 .create-journal-page form {
